# doc-editor

./: .dockerignore  AGENTS.md  ARCHITECTURE.md  IMPROVEMENT_IDEAS.md  Makefile  README.md
docker/: api.Dockerfile  docker-compose.yml  web.Dockerfile
scripts/: api.entrypoint.sh
services/api/: .flake8  .gitignore  pyproject.toml
services/api/app/: factory.py
services/api/app/core/: __init__.py  dependencies.py  exceptions.py  http_exceptions.py
services/api/app/routes/: __init__.py  documents.py  utils.py
services/api/app/schemas/: __init__.py  document.py  utils.py
services/api/app/services/: documents.py
services/api/app/storage/: __init__.py  file_storage.py
services/api/storage/: index.json
services/api/storage/documents/: document_03e8376823ba4a4daad92316.json  document_1d62720ca95941fea4deccaf.json  document_7ec8dfbdaff348f58af18d7b.json  document_938722140c4e42199ee8f80e.json  document_cee831bdee8a40b8ab103315.json  document_e140318295764b7f9b24ba6e.json  document_e565690b730b46ee8dbaa6c4.json  document_e674d755c1ff40bf8b57a29e.json  document_f25be525a697444e8b4741ef.json  document_f97ebcd140a942778c889483.json
services/web/: .dockerignore  .gitignore  jest.config.ts  package-lock.json  package.json
services/web/src/__tests__/: textBuffer.test.ts
services/web/src/app/: error.tsx  layout.tsx  page.tsx
services/web/src/components/: document-card.tsx  navbar.tsx
services/web/src/hooks/: index.ts  use-debounced-callback.ts
services/web/src/layout/: engine.ts  measure.ts  tokenize.ts
services/web/src/types/: index.ts  layout.ts  (+1 more)
(+43 files in other folders)
